<resources>
    <!-- General -->
    <string name="app_name">Uttam</string>
    <string name="get_started_text">Get Started</string>

    <!-- App tour -->
    <string name="tour_slide_1_text">Uttam is a wallpaper app that gently updates your wallpaper with perfectly crafted images everyday.</string>
    <string name="tour_slide_2_text">Uttam pushes rich notifications for you to interact with. It does so when a new wallpaper is downloaded. </string>
    <string name="tour_slide_3_text">You have full control over the setting of the wallpaper. You can opt to set it automatically or manually click the notification and set it. The choice is yours!</string>
    <string name="tour_slide_1_heading">Welcome to Uttam!</string>
    <string name="tour_slide_2_heading">Wallpaper notifications</string>
    <string name="tour_slide_3_heading">Full control</string>
    <string name="tour_slide_4_text">The app needs to know when to push notifications to the device. Take a second to set the refresh interval for the wallpaper notification.</string>
    <string name="tour_slide_4_go_text">Sweet! Hit done now!</string>
    <string name="refresh_interval_dialog_title">Select Refresh Interval</string>
    <string name="all_set_text">All Set!</string>
    <string name="set_refresh_interval_first_prompt">Set a refresh interval first</string>
    <string name="all_done_text">All done! Press done and give us a few seconds to set everything up.</string>

    <!-- New wallpaper notification -->
    <string name="wallpaper_notif_title">New Wallpaper!</string>
    <string name="wallpaper_notif_photo_by">"Photo by "</string>

    <!-- Content descriptions -->
    <string name="content_desc_settings_button">Settings button</string>
    <string name="content_desc_hero_img">Uttam\'s hero image showing two tall buildings</string>
    <string name="content_desc_app_logo">Uttam\'s Logo</string>
    <string name="content_desc_uttam_logo_small">Uttam\'s logo\'s small version.</string>

    <!-- Main UI -->
    <string name="settings_label">Settings</string>
    <string name="photographer_label">Photo by</string>

    <!-- Preferences -->
    <string name="category_general">General</string>
    <string name="category_iap">In-app Purchases</string>
    <string name="category_notifications">Notifications</string>
    <string name="key_automatic_wallpaper_set">setWallpaperAuto</string>
    <string name="title_automatic_wallpaper_set">Set Wallpaper Automatically</string>
    <string name="summary_automatic_wallpaper_set">New wallpaper will be set automatically in the background.</string>
    <string name="key_custom_sounds">customSound</string>
    <string name="summary_custom_sounds">Use custom notification sound.</string>
    <string name="title_custom_sounds">Custom Sounds</string>
    <string name="key_notif_led">notifictionLED</string>
    <string name="summary_notif_led">Use notification LED.</string>
    <string name="title_notif_led">Notification LED</string>
    <string name="key_fetch_over_data">fetchOnData</string>
    <string name="summary_fetch_over_data">Download wallpaper over mobile data. This is recommended for a seamless experience. </string>
    <string name="title_fetch_over_data">Fetch over mobile data (recommended)</string>
    <string name="key_refresh_interval">setRefreshInterval</string>
    <string name="title_refresh_interval">Wallpaper fetch interval</string>
    <string name="summary_refresh_interval">Set the refresh interval for new wallpapers.</string>
    <string name="key_compress_wallpaper">compressWallpaper</string>
    <string name="summary_compress_wallpaper">Recommended for older devices (under 720p screen resolutions).</string>
    <string name="title_compress_wallpaper">Compress wallpaper</string>

    <!-- Toast message strings -->
    <string name="setting_text">Setting wallpaper…</string>
    <string name="wallpaper_set_text">Wallpaper set successfully!</string>
    <string name="category_misc">Misc.</string>
    <string name="key_contact">contactDev</string>
    <string name="summary_contact">Want help? Have suggestions? Use this to contact the developer.</string>
    <string name="title_contact">Contact the Developer</string>
    <string name="key_review">review</string>
    <string name="summary_review">Like the app? Consider leaving a review in the Play Store!</string>
    <string name="title_review">Say Thanks!</string>
    <string name="activity_changelog_label">Uttam Changelog</string>
    <string name="wallpaper_saved_message">Wallpaper saved successfully!</string>
    <string name="wallpaper_share_text">Great wallpaper from %1$s on @getuttamapp today! %2$s</string>

</resources>
